crates/runtime/tests/snapshots/integration__mysql__character_set_results_default.snap
---
source: crates/runtime/tests/mysql/mod.rs
description: MySQL Integration Test Results
---
+----+---------------------------------------------------------------------+------------------------------------------+-----------------------------------------+
| id | col_text_utf8mb4                                                    | col_varchar_utf8mb4                      | col_normal_text                         |
+----+---------------------------------------------------------------------+------------------------------------------+-----------------------------------------+
| 1  | 🚀 This text contains UTF8MB4 characters that are not in UTF8MB3 😊 | 🦄 Another UTF8MB4 string with emojis 🎉 | Regular text with no special characters |
+----+---------------------------------------------------------------------+------------------------------------------+-----------------------------------------+
