crates/runtime/tests/snapshots/integration__mysql__mysql_integration_test_select.snap
---
source: crates/runtime/tests/mysql/mod.rs
description: MySQL Integration Test Results
---
+----+---------+----------+-----------+----------+--------------+-----------+------------+---------------------+------------+----------+----------+-------------+------------+----------------+-------------+------------------+----------+--------------+--------------------------------------------------------------------+
| id | col_bit | col_tiny | col_short | col_long | col_longlong | col_float | col_double | col_timestamp       | col_date   | col_time | col_blob | col_varchar | col_string | col_var_string | col_decimal | col_unsigned_int | col_char | col_set      | col_json                                                           |
+----+---------+----------+-----------+----------+--------------+-----------+------------+---------------------+------------+----------+----------+-------------+------------+----------------+-------------+------------------+----------+--------------+--------------------------------------------------------------------+
| 1  | 1       | 1        | 1         | 1        | 1            | 1.1       | 1.1        | 2019-01-01T00:00:00 | 2019-01-01 | 12:34:56 | 626c6f62 | varchar     | string     | var_string     | 1.11        | 10               | USA      | apple,banana | {"age": 30, "name": "John", "balance": 1234.56, "is_active": true} |
| 2  |         |          |           |          |              |           |            |                     |            |          |          |             |            |                |             |                  |          |              |                                                                    |
+----+---------+----------+-----------+----------+--------------+-----------+------------+---------------------+------------+----------+----------+-------------+------------+----------------+-------------+------------------+----------+--------------+--------------------------------------------------------------------+
