crates/runtime/tests/snapshots/integration__mysql__mysql_integration_test_select_limit_1.snap
---
source: crates/runtime/tests/mysql/mod.rs
assertion_line: 119
description: MySQL Integration Test Results
---
+--------------------------------------+---------------------+
| id                                   | created_at          |
+--------------------------------------+---------------------+
| 5ea5a3ac-07a0-4d4d-b201-faff68d8356c | 2023-05-02T14:30:00 |
+--------------------------------------+---------------------+
